# granturismo

./: .gitignore  CLAUDE.md  PACKET.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release-tarball.yml
examples/: quickstart.py  stream_position.py  stream_suspension.py
scripts/: build_tarball.py  sign_artifact.py
src/: proxy-wrapper.py  proxy.py
src/granturismo/: __init__.py
src/granturismo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/granturismo/intake/: feed.py
src/granturismo/model/: common.py  packet.py
src/granturismo/security/: __init__.py  decrypter.py  salsa20.py
src/granturismo/utils/: __init__.py  debug.py
tests/: helpers.py
tests/intake/: feed_test.py
tests/model/: packet_test.py
tests/security/: decrypter_test.py  test_salsa20.py
