[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "granturismo"
version = "0.2.0"
description = "Tools to get Grand Turismo telemetry data from PlayStation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Direct dependencies
    "salsa20 @ git+https://github.com/chrshdl/python-salsa20.git@bd496e0",
    "marshmallow-dataclass",
    "marshmallow-enum",
    "typeguard"
]

[project.optional-dependencies]
dev = [
    "sure",
    "unittest",
    "pytest-cov",
    "pylint-fail-under",
    "matplotlib"
]

[tool.cibuildwheel]
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
build-verbosity = "3"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
environment = { CFLAGS="-std=c99 -fno-strict-aliasing", LDFLAGS="-Wl,--strip-debug", OPENBLAS64_="/usr/local", NPY_USE_BLAS_ILP64="1", RUNNER_OS="Linux" }

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
test-skip = "*_arm64 *_universal2:arm64"
environment = { CFLAGS="-std=c99 -fno-strict-aliasing", OPENBLAS64_="/usr/local", NPY_USE_BLAS_ILP64="1", CC="clang", CXX="clang++" }

[tool.cibuildwheel.windows]
environment = { OPENBLAS64_="openblas", OPENBLAS="", NPY_USE_BLAS_ILP64="1", CFLAGS="", LDFLAGS="" }

[[tool.cibuildwheel.overrides]]
select = "*-win32"
environment = { OPENBLAS64_="", OPENBLAS="openblas", NPY_USE_BLAS_ILP64="0", CFLAGS="-m32", LDFLAGS="-m32" }
